fix styling on homepage

--- a/templates/primary_templates/home.html
+++ b/templates/primary_templates/home.html
@@ -7,9 +7,9 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
         <!-- Card 1: Purpose of Dancexam -->
-        <div class="bg-gray-50 shadow-md rounded-lg overflow-hidden relative hover:bg-gray-100 hover:shadow-xl transition duration-300">
-            <img src="/static/images/dancexam_thumbnail_1.webp" class="w-full h-64 xl:h-80 object-cover object-top rounded-t-lg" alt="Dancexam Logo" />
-            <div class="p-6 relative z-10 -mt-12">
+        <div class="bg-gray-50 shadow-md rounded-lg overflow-hidden hover:bg-gray-100 hover:shadow-xl transition duration-300">
+            <img src="/static/images/dancexam_thumbnail_1.webp" class="w-full h-64 xl:h-96 object-cover rounded-t-lg" alt="Dancexam Logo" />
+            <div class="p-6">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-4 lg:text-4xl">Welcome to Dancexam</h2>
                 <p class="text-gray-600 lg:text-xl">
                     Dancexam is your go-to digital platform for grading dance professionals. Originally built for the Greenville Westies, our website provides an efficient way for instructors to input and manage scores during advancement tests.
@@ -18,9 +18,9 @@
         </div>
 
         <!-- Card 2: How It Works -->
-        <div class="bg-gray-50 shadow-md rounded-lg overflow-hidden relative hover:bg-gray-100 hover:shadow-xl transition duration-300">
-            <img src="/static/images/dancexam_thumbnail_2.webp" class="w-full h-64 xl:h-80 object-cover object-top rounded-t-lg" alt="Dancexam Logo" />
-            <div class="p-6 relative z-10 -mt-12">
+        <div class="bg-gray-50 shadow-md rounded-lg overflow-hidden hover:bg-gray-100 hover:shadow-xl transition duration-300">
+            <img src="/static/images/dancexam_thumbnail_2.webp" class="w-full h-64 xl:h-96 object-cover rounded-t-lg" alt="Dancexam Logo" />
+            <div class="p-6">
                 <h2 class="text-2xl font-semibold text-gray-800 mb-4 lg:text-4xl">How It Works</h2>
                 <p class="text-gray-600 lg:text-xl">
                     Dancexam simplifies the grading process. Instructors can easily log in, select the testee, and digitally input scores for each dance level. The platform automatically calculates final grades and provides instant feedback, making it easier to track progress and ensure consistent evaluation.
