--- a/templates/auth_templates/sign-up.html
+++ b/templates/auth_templates/sign-up.html
@@ -41,7 +41,11 @@
                     class="block border border-grey-light w-full p-3 rounded mb-4"
                     name="confirm_password"
                     placeholder="Confirm Password" />
-
+                <input 
+                    type="password"
+                    class="block border border-grey-light w-full p-3 rounded mb-4"
+                    name="licensing_key"
+                    placeholder="Licensing Key (see contact page)" />
                 <button
                     type="submit"
                     class="w-full text-center py-3 rounded bg-green-500 text-white hover:bg-green-700 focus:outline-none my-1"
