--- a/templates/auth_templates/login.html
+++ b/templates/auth_templates/login.html
@@ -7,46 +7,54 @@
 {% block title %}Log In{% endblock %}
 
 {% block content %}
-<div class="bg-grey-lighter min-h-screen flex flex-col">
-    <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
-        <div class="bg-white px-6 py-8 rounded shadow-md text-black w-full">
-            <h1 class="mb-8 text-3xl text-center">Login</h1>
-            <form method="post" >
-                <input 
-                    type="text"
-                    class="block border border-grey-light w-full p-3 rounded mb-4"
-                    name="email"
-                    placeholder="Email" />
 
-                <input 
-                    type="password"
-                    class="block border border-grey-light w-full p-3 rounded mb-4"
-                    name="password"
-                    placeholder="Password" />
+    <div class="bg-grey-lighter min-h-screen flex flex-col">
+        <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
+            <div class="bg-white px-6 py-8 rounded shadow-md text-black w-full">
+                <h1 class="mb-4 text-3xl text-center">Login</h1>
 
-                <button
-                    type="submit"
-                    class="w-full text-center py-3 rounded bg-green-500 text-white hover:bg-green-700 focus:outline-none my-1"
-                >Login</button>
-            </form>
+                <!-- To be shown only for a demo -->
+                <h2 class="mb-4 text-2xl text-center text-gray-600 {% if is_demo_mode %} {% else %} hidden {% endif %}">Use the placeholder values to sign in to the demo.</h2>
+                
+                <form method="post" >
+                    <input 
+                        type="text"
+                        class="block border border-grey-light w-full p-3 rounded mb-4"
+                        name="email"
+                        placeholder="{% if is_demo_mode %}demo@demo.com{% else %}Email{% endif %}"
+                        value="{% if is_demo_mode %}demo@demo.com{% else %}{% endif %}" />
 
-            <div class="text-center text-sm text-grey-dark mt-4">
-                By logging in, you agree to the 
-                <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
-                    Terms of Service
-                </a> and 
-                <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
-                    Privacy Policy
-                </a>
+                    <input 
+                        type="password"
+                        class="block border border-grey-light w-full p-3 rounded mb-4"
+                        name="password"
+                        placeholder="{% if is_demo_mode %}demo{% else %}Password{% endif %}"
+                        value="{% if is_demo_mode %}demo{% else %}{% endif %}"/>
+
+                    <button
+                        type="submit"
+                        class="w-full text-center py-3 rounded bg-green-500 text-white hover:bg-green-700 focus:outline-none my-1"
+                    >Login</button>
+                </form>
+
+                <div class="text-center text-sm text-grey-dark mt-4">
+                    By logging in, you agree to the 
+                    <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
+                        Terms of Service
+                    </a> and 
+                    <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
+                        Privacy Policy
+                    </a>
+                </div>
+            </div>
+
+            <div class="text-grey-dark mt-6">
+                Don't have an account? 
+                <a class="no-underline border-b border-blue text-blue" href="/sign-up" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none">
+                    Sign Up
+                </a>.
             </div>
         </div>
-
-        <div class="text-grey-dark mt-6">
-            Don't have an account? 
-            <a class="no-underline border-b border-blue text-blue" href="/sign-up" hx-boost="true" hx-select="#primary-content" hx-target="#primary-content" hx-swap="outerHTML show:none">
-                Sign Up
-            </a>.
-        </div>
     </div>
-</div>
+
 {% endblock %}
