--- a/templates/primary_templates/dancer_test.html
+++ b/templates/primary_templates/dancer_test.html
@@ -41,7 +41,8 @@
                 {% include "../partial_templates/bonus_points.html" %}
             </div>
 
-            <input type="submit" value="Submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            <!-- Input is disabled during demo mode -->
+            <input type="submit" value={% if is_demo_mode %}Disabled for Demo{% else %}Submit{% endif %} class="{% if is_demo_mode %}bg-gray-300 text-gray-900{% else %}bg-blue-500 hover:bg-blue-700 text-white{% endif %} mx-auto font-bold py-2 px-4 rounded" {% if is_demo_mode %}disabled{% else %}{% endif %}>
         </form>
     </div>
 </body>
