--- a/templates/partial_templates/bonus_points.html
+++ b/templates/partial_templates/bonus_points.html
@@ -8,7 +8,7 @@
 
             <td class="py-2 px-4 border-b text-center">
                 <input type="checkbox" name="bonus--{{ bonus_item.label|lower|replace(" ", "_") }}" value="{{ bonus_item.points }}" id="bonus--{{ bonus_item.label|lower|replace(" ", "_") }}" class="hidden peer">
-                <label for="bonus--{{ bonus_item.label|lower|replace(" ", "_") }}" class="inline-flex items-center justify-center w-full h-12 p-2 text-sm font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent">
+                <label for="bonus--{{ bonus_item.label|lower|replace(" ", "_") }}" class="inline-flex items-center justify-center w-full h-12 p-2 text-sm font-medium text-gray-900 bg-white border-2 border-gray-300 rounded-lg cursor-pointer peer-checked:bg-blue-600 peer-checked:text-white peer-checked:border-transparent hover:bg-gray-100 hover:shadow-sm transition duration-300">
                     + {{ bonus_item.points }}
                 </label>
             </td>
