add licensing info to contact page

--- a/templates/primary_templates/contact.html
+++ b/templates/primary_templates/contact.html
@@ -7,21 +7,23 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         <!-- Contact Info Card -->
         <div class="bg-gray-50 shadow-md rounded-lg overflow-hidden p-6 hover:bg-gray-100 hover:shadow-xl transition duration-300">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4 lg:text-4xl text-center">Contact</h2>
-            <div class="flex items-center justify-center space-x-4">
+            <h2 class="text-2xl font-semibold text-gray-800 mb-4 lg:text-4xl text-center rounded-lg bg-gray-200 hover:bg-gray-300">Contact</h2>
+            <div class="items-center justify-center space-x-4">
                 <p class="text-gray-700 text-lg text-center">
                     <span class="font-semibold">Corrado Mazzarelli</span><br>
                     <a href="https://corradomazzarelli.com" class="text-blue-600 hover:underline">corradomazzarelli.com</a><br>
-                    <a href="mailto:corrado@mazzarelli.biz" class="text-blue-600 hover:underline">corrado@mazzarelli.biz</a>
+                </p>
+                <p class="text-gray-700 text-lg">
+                    Shoot an email to <a href="mailto:corrado@mazzarelli.biz" class="text-blue-600 hover:underline">corrado@mazzarelli.biz</a> for information regarding a licensing key/if you would like to use this for your dance community.
                 </p>
             </div>
         </div>
 
         <!-- Note to the Reader Card -->
         <div class="bg-gray-50 shadow-md rounded-lg overflow-hidden p-6 hover:bg-gray-100 hover:shadow-xl transition duration-300">
-            <h2 class="text-2xl font-semibold text-gray-800 mb-4 lg:text-4xl text-center">Note to the Reader</h2>
+            <h2 class="text-2xl font-semibold text-gray-800 mb-4 lg:text-4xl text-center rounded-lg bg-gray-200 hover:bg-gray-300">Note to the Reader</h2>
             <p class="text-gray-600 lg:text-xl text-center">
-                Presumably if you've found your way to this page, you either want to hire me, or me/my friends have shown you this website. Either way, my contact information is likely moot. I'll provide it regardless just for posterity's sake.
+                Presumably, if you've found your way to this page, you either want to hire me, or me/my friends have shown you this website. Either way, my contact information is likely moot. I'll provide it regardless just for posterity's sake.
             </p>
         </div>
     </div>
