--- a/templates/primary_templates/dancer_test.html
+++ b/templates/primary_templates/dancer_test.html
@@ -4,45 +4,55 @@
 
 {% block content %}
 <body>
-
-    <!-- Tiny Screen Warning -->
-    <div class="sm:hidden mx-4 mt-4 p-4 border border-gray-300 rounded-lg shadow-lg bg-gray-100">
-        <h1 class="text-xl font-semibold text-gray-700 mb-2">Screen Too Small</h1>
-        <p class="text-gray-600">For the best experience, please use a larger screen or switch to landscape mode on your mobile device.</p>
-    </div>
-
-
-    <div class="mx-auto p-4 hidden sm:block">
+    <div class="mx-auto p-4">
         <h2 class="text-4xl font-bold mb-4 text-center">{{ test_type|capitalize }} Advancement Test</h2>
         <form method="post" class="bg-white p-6 rounded shadow-md">
 
             <!-- User Info Section -->
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+            <div class="card block shadow-md rounded border border-gray-300 mb-6 p-4">
                 {% include "../partial_templates/testee_info.html" %}
             </div>
 
-            <!-- Pattern Scoring Table -->
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
-                {% include "../partial_templates/pattern_scoring.html" %}
+            <!-- Tiny Screen Warning -->
+            <div class="sm:hidden mt-4 p-4 border border-gray-300 rounded-lg shadow-lg bg-gray-100">
+                <h1 class="text-xl font-semibold text-gray-700 mb-2">Screen Too Small</h1>
+                <p class="text-gray-600">For the best experience, please use a larger screen or switch to landscape mode on your mobile device.</p>
             </div>
 
-            <!-- Technique Scoring Table -->
+            <div class="hidden sm:block justify-center">
+                <!-- Dynamic Grading Section -->
+                
+                <div 
+                hx-post="/private/grade-test" 
+                hx-trigger="load, change from:form"
+                hx-debounce="0.25s"
+                >
+                </div>
 
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
-                <h2 class="text-2xl font-bold py-4 px-4 border-b-2 text-center">Technique Scoring</h2>
-                {% for technique_group in technique_groups %}
-                    {% include "../partial_templates/technique_scoring.html" %}
-                {% endfor %}
+                <div class="flex flex-col text-center">
+                    <input type="submit" value={% if is_demo_mode %}"Submission Disabled for Demo"{% else %}Submit{% endif %} class="{% if is_demo_mode %}bg-gray-300 text-gray-900{% else %}bg-blue-500 hover:bg-blue-700 text-white{% endif %} mx-auto font-bold py-2 px-4 mb-4 rounded" {% if is_demo_mode %}disabled{% else %}{% endif %}>
+                </div>
+
+                <!-- Pattern Scoring Table -->
+                <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+                    {% include "../partial_templates/pattern_scoring.html" %}
+                </div>
+
+                <!-- Technique Scoring Table -->
+
+                <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+                    <h2 class="text-2xl font-bold py-4 px-4 border-b-2 text-center">Technique Scoring</h2>
+                    {% for technique_group in technique_groups %}
+                        {% include "../partial_templates/technique_scoring.html" %}
+                    {% endfor %}
+                </div>
+
+
+                <!-- Bonus Points Table -->
+                <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
+                    {% include "../partial_templates/bonus_points.html" %}
+                </div>
             </div>
-
-
-            <!-- Bonus Points Table -->
-            <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
-                {% include "../partial_templates/bonus_points.html" %}
-            </div>
-
-            <!-- Input is disabled during demo mode -->
-            <input type="submit" value={% if is_demo_mode %}Disabled for Demo{% else %}Submit{% endif %} class="{% if is_demo_mode %}bg-gray-300 text-gray-900{% else %}bg-blue-500 hover:bg-blue-700 text-white{% endif %} mx-auto font-bold py-2 px-4 rounded" {% if is_demo_mode %}disabled{% else %}{% endif %}>
         </form>
     </div>
 </body>
