--- a/templates/partial_templates/technique_scoring.html
+++ b/templates/partial_templates/technique_scoring.html
@@ -1,6 +1,6 @@
 <table class="bg-white w-full mx-1 table-fixed">
     <!-- Add the labels for the % of the dance that each technique must be present -->
-    <thead>
+    <thead class="sticky top-0 bg-white z-10">
         <tr>
             <!-- Blank header to properly align everything -->
             <th class="w-1/5"></th>
