queue in db, queue page made, enqueue added

--- a/templates/extensible_templates/nav_on_top.html
+++ b/templates/extensible_templates/nav_on_top.html
@@ -42,6 +42,9 @@
             <a href="/dashboard" class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0">Dashboard</a>
           </li>
           <li>
+            <a href="/queue" class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0">Test Queue</a>
+          </li>
+          <li>
             <a href="/contact" class="block py-2 px-3 text-white rounded hover:bg-gray-800 md:hover:bg-transparent md:hover:text-blue-500 md:p-0">Contact</a>
           </li>
         </ul>
