queue added, works, just needs to be pretty

--- a/templates/partial_templates/pattern_scoring.html
+++ b/templates/partial_templates/pattern_scoring.html
@@ -1,6 +1,6 @@
 <table class="bg-white w-full mx-1 table-fixed">
     <col>
-    {% for scoring_category in pattern_scoring_categories %}
+    {% for scoring_category in test.pattern_scoring_categories %}
         <colgroup span="{{ scoring_category.points.len() }}"></colgroup>
     {% endfor %}
 
@@ -13,8 +13,8 @@
             <!-- Empty Padding to Align Everything -->
             <th class="w-1/4"></th>
 
-            {% for scoring_category in pattern_scoring_categories %}
-                <th class="lg:text-4xl outline-gray-300 py-2" colspan="{{ scoring_category.points.len() }}" scope="colgroup">
+            {% for scoring_category in test.pattern_scoring_categories %}
+                <th class="lg:text-4xl py-2" colspan="{{ scoring_category.points.len() }}" scope="colgroup">
                     {{ scoring_category.name }}
                 </th>
             {% endfor %}
@@ -25,7 +25,7 @@
             <!-- Empty Padding to Align Everything -->
             <th class="w-1/4 border-r"></th>
 
-            {% for scoring_category in pattern_scoring_categories %}
+            {% for scoring_category in test.pattern_scoring_categories %}
                 {% for header in scoring_category.headers %}
                     <th class="mt-1 text-gray-600 lg:text-2xl {% if loop.last %}border-r border-gray-300{% else %}{% endif %}">
                         {{ header }}
@@ -37,13 +37,13 @@
 
     <!-- Add the Patterns -->
     <tbody>
-        {% for pattern in patterns %}
+        {% for pattern in test.patterns %}
         <tr>
             <!-- Add the Pattern Name to the Left Column -->
             <td class="py-2 px-4 border-b border-r font-bold sm:text-sm md:text-xl lg:text-2xl text-right">{{ pattern }}</td>
 
             <!-- Add radio buttons for each scoring category -->
-            {% for scoring_category in pattern_scoring_categories %}
+            {% for scoring_category in test.pattern_scoring_categories %}
                 {% for point in scoring_category.points %}
                     <!-- Add a border between scoring categories for comprehension -->
                     <td class="py-2 px-1 w-full border-b text-center {% if loop.last %}border-r border-gray-300 last:border-0{% else %}{% endif %}">
