--- a/templates/partial_templates/bonus_points.html
+++ b/templates/partial_templates/bonus_points.html
@@ -2,7 +2,7 @@
 <table class="min-w-full bg-white">
     <h2 class="text-2xl font-bold py-4 px-4 border-b-2 text-center">Bonus Points</h2>
     <tbody>
-        {% for bonus_item in bonus_items %}
+        {% for bonus_item in test.bonus_items %}
         <tr>
             <td class="py-2 px-4 border-b text-xl text-right">{{ bonus_item.label }}</td>
 
