--- a/templates/primary_templates/dancer_test.html
+++ b/templates/primary_templates/dancer_test.html
@@ -1,11 +1,11 @@
 {% extends "./extensible_templates/nav_on_top.html" %}
 
-{% block title %}{{ test_type|capitalize }} Test{% endblock %}
+{% block title %}{{ test.test_type|capitalize }} Test{% endblock %}
 
 {% block content %}
 <body>
     <div class="mx-auto p-4">
-        <h2 class="text-4xl font-bold mb-4 text-center">{{ test_type|capitalize }} Advancement Test</h2>
+        <h2 class="text-4xl font-bold mb-4 text-center">{{ test.test_type|capitalize }} Advancement Test</h2>
         <form method="post" class="bg-white p-6 rounded shadow-md">
 
             <!-- User Info Section -->
@@ -42,7 +42,7 @@
 
                 <div class="card shadow-md rounded border border-gray-300 mb-6 p-4">
                     <h2 class="text-2xl font-bold py-4 px-4 border-b-2 text-center">Technique Scoring</h2>
-                    {% for technique_group in technique_groups %}
+                    {% for technique_group in test.technique_groups %}
                         {% include "../partial_templates/technique_scoring.html" %}
                     {% endfor %}
                 </div>
