--- a/templates/primary_templates/dashboard.html
+++ b/templates/primary_templates/dashboard.html
@@ -25,6 +25,8 @@
   </div>
 </div>
 
+<div hx-get="/queue" hx-select="#queue" hx-trigger="load" class="mt-8 mx-4"></div>
+
 <div hx-get="/search-testee" hx-select="#search-testee-widget" hx-swap="outerHTML" hx-trigger="load" class="mt-8"></div>
 
 {% endblock %}
